cc_library(
    name = "includes",
    hdrs = glob(["**/*.hpp"]),
    include_prefix = "hdf5",
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "hdf5",
    visibility = ["//visibility:public"],
    deps = [
        ":includes",
        "@boost//:fusion",
        "@boost//:noncopyable",
        "@hdf5//:hdf5-parallel-cmake",
    ],
)
